--- a/inventory.yml
+++ b/inventory.yml
@@ -2,5 +2,6 @@ foo:
   hosts:
     hirschmann: 
       ansible_host: 192.168.1.31
+      ansible_connection: ansible.netcommon.network_cli
       ansible_network_os: hirschmann
       ansible_user: admin
