--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "ansible (>=11.7.0,<12.0.0)"
+    "ansible (>=11.7.0,<12.0.0)",
+    "ansible-pylibssh (>=1.2.2,<2.0.0)"
 ]
 
 [build-system]
