--- a/openrail/switchos/inventory_template.ini
+++ b/openrail/switchos/inventory_template.ini
@@ -4,7 +4,7 @@
 [switchos_devices]
 # Add your SwitchOS devices here
 # Examples:
-switch1 ansible_host=127.0.0.1
+switch1 ansible_host=192.168.1.31
 # switch2 ansible_host=192.168.1.11
 # switch3 ansible_host=switch3.example.com
 
@@ -14,10 +14,10 @@ ansible_connection=ansible.netcommon.network_cli
 ansible_network_os=openrail.switchos.switchos
 ansible_user=admin
 ansible_ssh_pass=admin
-ansible_ssh_port=10022
+#ansible_ssh_port=10022
 #ansible_become=true
-#ansible_become_method=enable
-#ansible_become_pass=admin
+ansible_become_method=enable
+ansible_become_pass=admin
 
 # SSH settings
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
