--- a/openrail/switchos/test_terminal_plugin.yml
+++ b/openrail/switchos/test_terminal_plugin.yml
@@ -1,12 +1,13 @@
 ---
 - name: Test SwitchOS Terminal Plugin with cli_command
   hosts: switchos_devices
+  connection: ansible.netcommon.network_cli
   gather_facts: false
 
   tasks:
     - name: Test show port command
       ansible.netcommon.cli_command:
-        command: 'show version'
+        command: 'show port'
       register: port_output
 
     - name: Display port output
