--- a/inventory.yml
+++ b/inventory.yml
@@ -1,7 +1,12 @@
 foo:
   hosts:
-    hirschmann: 
+    hirschmann:
       ansible_host: 192.168.1.31
       ansible_connection: ansible.netcommon.network_cli
       ansible_network_os: hirschmann
+      ansible_user: admin
+    normad:
+      ansible_host: 192.168.1.41
+      ansible_connection: ansible.netcommon.network_cli
+      ansible_network_os: normad
       ansible_user: admin
