--- a/inventory.yml
+++ b/inventory.yml
@@ -3,5 +3,5 @@ foo:
     hirschmann: 
       ansible_host: 192.168.1.31
       ansible_connection: ansible.netcommon.network_cli
-      ansible_network_os: hirschmann
+      ansible_network_os:  openrail.switchos.hirschmann
       ansible_user: admin
