--- a/inventory.yml
+++ b/inventory.yml
@@ -10,3 +10,8 @@ foo:
       ansible_connection: ansible.netcommon.network_cli
       ansible_network_os: openrail.switchos.normad
       ansible_user: admin
+    kontron:
+      ansible_host: 192.168.1.11
+      ansible_connection: ansible.netcommon.network_cli
+      ansible_network_os: openrail.switchos.kontron
+      ansible_user: admin
