fixup lantech cliconf

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 # Installs collections into [current dir]/ansible_collections/namespace/collection_name
 collections_path = ./
+
+[ssh_connection]
+ssh_args = -oHostKeyAlgorithms=+ssh-rsa
