--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+ssh-mitm = "^5.0.1"
+ansible-lint = "^25.6.1"
+
