--- a/topologyDiscovery/credentials.yaml
+++ b/topologyDiscovery/credentials.yaml
@@ -4,7 +4,7 @@
 credentials:
   hirschmann:
     default_username: "admin"
-    default_password: "hirschmann"
+    default_password: "admin"
     alternative_credentials:
       - username: "admin"
         password: "admin"
