feat(roles):  add filter (WIP)
Co-authored-by: Nils Bauer <nils-bauer@users.noreply.github.com>

--- a/ansible_collections/openrail/switchos/roles/hirschmann/tasks/main.yml
+++ b/ansible_collections/openrail/switchos/roles/hirschmann/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
 # import tasks from the Hirschmann role
 - name: Import show vlan
-  ansible.builtin.import_tasks: show_vlan.yml
+  ansible.builtin.import_tasks:
+    file: show_vlan.yml
