--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ansible (>=11.7.0,<12.0.0)",
-    "ansible-pylibssh (>=1.2.2,<2.0.0)"
+    "ansible-pylibssh (>=1.2.2,<2.0.0)",
+    "paramiko (>=3.5.1,<4.0.0)"
 ]
 
 [build-system]
