feat(roles): add VLAN management tasks and update playbook variables

--- a/ansible_collections/openrail/switchos/roles/hirschmann/tasks/main.yml
+++ b/ansible_collections/openrail/switchos/roles/hirschmann/tasks/main.yml
@@ -3,6 +3,22 @@
   ansible.builtin.import_tasks:
     file: show_vlans.yml
 
+- name: Import add vlans
+  ansible.builtin.import_tasks:
+    file: add_vlans.yml
+
+- name: Import delete vlans
+  ansible.builtin.import_tasks:
+    file: delete_vlans.yml
+
 - name: Import show vlan members
   ansible.builtin.import_tasks:
     file: show_vlan_members.yml
+
+- name: Import add interfaces to vlans
+  ansible.builtin.import_tasks:
+    file: add_interfaces_to_vlans.yml
+
+- name: Import remove interfaces from vlans
+  ansible.builtin.import_tasks:
+    file: remove_interfaces_from_vlans.yml
