--- a/ansible_collections/openrail/switchos/roles/hirschmann/tasks/remove_interfaces_from_vlans.yml
+++ b/ansible_collections/openrail/switchos/roles/hirschmann/tasks/remove_interfaces_from_vlans.yml
@@ -3,13 +3,14 @@
   ignore_errors: true
   vars:
     vlan_cmds: |
-      configure
       interface {{ item.interface }}
       {% for vlan in item.vlans %}
       vlan participation exclude {{ vlan.vlan_id }}
       {% endfor %}
       exit
   ansible.netcommon.cli_command:
-    command: "{{ vlan_cmds }}"
+    command: |
+      configure
+      {{ vlan_cmds }}
+      exit
   loop: "{{ interfaces_vlans_to_remove }}"
-
